--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -2,8 +2,8 @@
   "TITLE": "浙江瑞宏塑胶有限公司-PVB|pvb film | PVB胶片| PVB中间膜| 玻璃|安全玻璃| 聚乙烯醇缩丁醛树脂",
   "NAV-NAME": "浙江瑞宏塑胶有限公司",
   "NAV-HOME": "网站首页",
-  "NAV-PHILOSOPHY": "公司简介",
-  "NAV-TECHNOLOGY": "新闻中心",
+  "NAV-INTRO": "公司简介",
+  "NAV-NEWS": "新闻中心",
   "NAV-ROADMAP": "产品展示",
   "NAV-WALLET": "在线订单",
   "NAV-EXCHANGE": "诚聘精英",
@@ -17,19 +17,19 @@
   "WELCOME-SUB-TITLE": "VIG COIN的目标是成为一个去中心化，安全，注意隐私，请求证明，节能，Web友好的加密币。",
   "WELCOME-LEARN-MORE": "了解更多",
   "WELCOME-WHITE-PAPER": "白皮书",
-  "PHILOSOPHY-1": "去中心化",
-  "PHILOSOPHY-2": "开发者驱动",
-  "PHILOSOPHY-3": "节约能源",
-  "PHILOSOPHY-4": "安全保护隐私",
-  "PHILOSOPHY-5": "Web与移动导向",
-  "TECHNOLOGY-T1": "基于CryptoNote",
-  "TECHNOLOGY-T1-DETAIL": "CryptoNote是一个先进的加密币协议，门罗也是基于这个协议。它不可追溯，能保护隐私，安全性高。",
-  "TECHNOLOGY-T2": "请求证明",
-  "TECHNOLOGY-T2-DETAIL": "VIG COIN试图引入节约能源的共识技术。请求证明(PoRs,Proof of Requests)是它首次提出，并将会启用的方式。",
-  "TECHNOLOGY-T3": "节点即服务",
-  "TECHNOLOGY-T3-DETAIL": "由于PoW是最成熟的加密币分发形式。VIG COIN一开始会基于Pow，但是他同时也是能源消耗的，所以VIG COIN采用了请求证明(PoRs,Proof of Requests)。 而请求证明本身就是让节点成为了服务者。",
-  "TECHNOLOGY-T4": "自由软件",
-  "TECHNOLOGY-T4-DETAIL": "VIG COIN的所有项目都是默认基于GPL创建的。所以VIG COIN的所有软件都是自由软件。因为VIG COIN创建的目标就是谋求全人类在软件层面的自由。",
+  "INTRO-1": "去中心化",
+  "INTRO-2": "开发者驱动",
+  "INTRO-3": "节约能源",
+  "INTRO-4": "安全保护隐私",
+  "INTRO-5": "Web与移动导向",
+  "NEWS-T1": "基于CryptoNote",
+  "NEWS-T1-DETAIL": "CryptoNote是一个先进的加密币协议，门罗也是基于这个协议。它不可追溯，能保护隐私，安全性高。",
+  "NEWS-T2": "请求证明",
+  "NEWS-T2-DETAIL": "VIG COIN试图引入节约能源的共识技术。请求证明(PoRs,Proof of Requests)是它首次提出，并将会启用的方式。",
+  "NEWS-T3": "节点即服务",
+  "NEWS-T3-DETAIL": "由于PoW是最成熟的加密币分发形式。VIG COIN一开始会基于Pow，但是他同时也是能源消耗的，所以VIG COIN采用了请求证明(PoRs,Proof of Requests)。 而请求证明本身就是让节点成为了服务者。",
+  "NEWS-T4": "自由软件",
+  "NEWS-T4-DETAIL": "VIG COIN的所有项目都是默认基于GPL创建的。所以VIG COIN的所有软件都是自由软件。因为VIG COIN创建的目标就是谋求全人类在软件层面的自由。",
   "WHAT-IS-VIG-COIN": "VIG COIN是什么?",
   "WHAT-IS-VIG-COIN-INTRO": "VIG COIN是一个加密币，它旨在推动加密币在移动设备与计算机上的全球范围的应用。它是一个追求创新，解决问题的加密币，对新的加密币技术非常关注。并旨在让所有人都便捷的使用加密币。它也旨在加强每个人的财富隐密与安全。",
   "ROADMAP-T1": "1. 构建基本币",
