--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
     "NAV-HOME": "Home",
-    "NAV-PHILOSOPHY": "Philosophy",
-    "NAV-TECHNOLOGY": "Technology",
+    "NAV-INTRO": "Philosophy",
+    "NAV-NEWS": "Technology",
     "NAV-ROADMAP": "Road Map",
     "NAV-WALLET": "Wallet",
     "NAV-EXCHANGE": "Exchange",
@@ -15,19 +15,19 @@
     "WELCOME-SUB-TITLE": "VIG COIN is to be a decentralized, secure, private, proof-of-request, energy-saving, web-friendly cryptocurrency.",
     "WELCOME-LEARN-MORE": "Learn more",
     "WELCOME-WHITE-PAPER": "White Paper",
-    "PHILOSOPHY-1": "Decentralized",
-    "PHILOSOPHY-2": "Developer Driven",
-    "PHILOSOPHY-3": "Energy Saving",
-    "PHILOSOPHY-4": "Secure & Private",
-    "PHILOSOPHY-5": "Web & Mobile",
-    "TECHNOLOGY-T1": "CryptoNote Based",
-    "TECHNOLOGY-T1-DETAIL": "An advanced cryptocurrency protocol, where monero is derived from. It is untraceable, private and secure.",
-    "TECHNOLOGY-T2": "Proof of Requests",
-    "TECHNOLOGY-T2-DETAIL": "VIG COIN is trying to adopt an energy saving consensus, Proof of Requests is where it will start from.",
-    "TECHNOLOGY-T3": "Node as a service",
-    "TECHNOLOGY-T3-DETAIL": "VIG COIN utilizes PoRs since PoW is energy-consuming. With PoRs node as a service is enabled fundamentally.",
-    "TECHNOLOGY-T4": "Free Software",
-    "TECHNOLOGY-T4-DETAIL": "As all projects created by vigcoin are default to GPL, which makes them free software. They are created to contribute the software freedom of human beings.",
+    "INTRO-1": "Decentralized",
+    "INTRO-2": "Developer Driven",
+    "INTRO-3": "Energy Saving",
+    "INTRO-4": "Secure & Private",
+    "INTRO-5": "Web & Mobile",
+    "NEWS-T1": "CryptoNote Based",
+    "NEWS-T1-DETAIL": "An advanced cryptocurrency protocol, where monero is derived from. It is untraceable, private and secure.",
+    "NEWS-T2": "Proof of Requests",
+    "NEWS-T2-DETAIL": "VIG COIN is trying to adopt an energy saving consensus, Proof of Requests is where it will start from.",
+    "NEWS-T3": "Node as a service",
+    "NEWS-T3-DETAIL": "VIG COIN utilizes PoRs since PoW is energy-consuming. With PoRs node as a service is enabled fundamentally.",
+    "NEWS-T4": "Free Software",
+    "NEWS-T4-DETAIL": "As all projects created by vigcoin are default to GPL, which makes them free software. They are created to contribute the software freedom of human beings.",
     "WHAT-IS-VIG-COIN": "What is VIG COIN?",
     "WHAT-IS-VIG-COIN-INTRO": "VIG COIN is a cryptocurrency that wants to drive cryptocurrency technology to be used world wide with mobile devices and computers. It is an innovative coin with an open mind to new technologies. It wants everyone to use cryptocurrency easily. It is created for everyone who cares wealth privacy and security.",
     "ROADMAP-T1": "1. Building coin basics",
