--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,7 +2,7 @@
     "NAV-HOME": "Home",
     "NAV-INTRO": "Philosophy",
     "NAV-NEWS": "Technology",
-    "NAV-ROADMAP": "Road Map",
+    "NAV-PRODUCTS": "Road Map",
     "NAV-WALLET": "Wallet",
     "NAV-EXCHANGE": "Exchange",
     "NAV-MINING": "Mining",
@@ -30,17 +30,17 @@
     "NEWS-T4-DETAIL": "As all projects created by vigcoin are default to GPL, which makes them free software. They are created to contribute the software freedom of human beings.",
     "WHAT-IS-VIG-COIN": "What is VIG COIN?",
     "WHAT-IS-VIG-COIN-INTRO": "VIG COIN is a cryptocurrency that wants to drive cryptocurrency technology to be used world wide with mobile devices and computers. It is an innovative coin with an open mind to new technologies. It wants everyone to use cryptocurrency easily. It is created for everyone who cares wealth privacy and security.",
-    "ROADMAP-T1": "1. Building coin basics",
-    "ROADMAP-T1-INTRO": "Based on CryptoNote, Build a new Coin with everything ready.",
-    "ROADMAP-T2": "2. Redesigned apis",
-    "ROADMAP-T2-INTRO": "Include code migration, refinery, Architecturing, api documentation.",
-    "ROADMAP-T3": "3. Lightweight and multiplatform wallet",
-    "ROADMAP-T3-INTRO": "After api and architectural redesign, VIG will be capable in handling lightweight wallet requests.",
-    "ROADMAP-T4": "4. Node as a service for merchants",
-    "ROADMAP-T4-INTRO": "After api and architectural redesign, VIG will be capable to implement a service for each node, where every wallet can request at. Merchants can own their profits by operating a service node for users from all over the world.",
-    "ROADMAP-STATE-DONE": "Done",
-    "ROADMAP-STATE-PROGRESSING": "Progressing",
-    "ROADMAP-STATE-PLANNED": "Planned",
+    "PRODUCTS-T1": "1. Building coin basics",
+    "PRODUCTS-T1-INTRO": "Based on CryptoNote, Build a new Coin with everything ready.",
+    "PRODUCTS-T2": "2. Redesigned apis",
+    "PRODUCTS-T2-INTRO": "Include code migration, refinery, Architecturing, api documentation.",
+    "PRODUCTS-T3": "3. Lightweight and multiplatform wallet",
+    "PRODUCTS-T3-INTRO": "After api and architectural redesign, VIG will be capable in handling lightweight wallet requests.",
+    "PRODUCTS-T4": "4. Node as a service for merchants",
+    "PRODUCTS-T4-INTRO": "After api and architectural redesign, VIG will be capable to implement a service for each node, where every wallet can request at. Merchants can own their profits by operating a service node for users from all over the world.",
+    "PRODUCTS-STATE-DONE": "Done",
+    "PRODUCTS-STATE-PROGRESSING": "Progressing",
+    "PRODUCTS-STATE-PLANNED": "Planned",
     "EXCHANGE-NAME-1": "QBTC",
     "EXCHANGE-NAME-1-URL": "https://www.qbtc.ink/trade?symbol=VIG_USDT",
     "EXCHANGE-BUY": "Buy",
