--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -4,7 +4,7 @@
   "NAV-HOME": "网站首页",
   "NAV-INTRO": "公司简介",
   "NAV-NEWS": "新闻中心",
-  "NAV-ROADMAP": "产品展示",
+  "NAV-PRODUCTS": "产品展示",
   "NAV-WALLET": "在线订单",
   "NAV-EXCHANGE": "诚聘精英",
   "NAV-MINING": "客户服务",
@@ -32,17 +32,17 @@
   "NEWS-T4-DETAIL": "VIG COIN的所有项目都是默认基于GPL创建的。所以VIG COIN的所有软件都是自由软件。因为VIG COIN创建的目标就是谋求全人类在软件层面的自由。",
   "WHAT-IS-VIG-COIN": "VIG COIN是什么?",
   "WHAT-IS-VIG-COIN-INTRO": "VIG COIN是一个加密币，它旨在推动加密币在移动设备与计算机上的全球范围的应用。它是一个追求创新，解决问题的加密币，对新的加密币技术非常关注。并旨在让所有人都便捷的使用加密币。它也旨在加强每个人的财富隐密与安全。",
-  "ROADMAP-T1": "1. 构建基本币",
-  "ROADMAP-T1-INTRO": "基于CryptoNote，构建一个方方面面基本完备的新币。",
-  "ROADMAP-T2": "2. 重新设计API",
-  "ROADMAP-T2-INTRO": "包括代码迁移，优化，架构，完善API文档，提升原有软件的稳定性与功能。",
-  "ROADMAP-T3": "3. 轻量级的，多平台的钱包",
-  "ROADMAP-T3-INTRO": "在API和架构重新设计之后，让VIG COIN可以处理轻钱包的请求。从而为进一步实现多平台的钱包打下基础。",
-  "ROADMAP-T4": "4. 实现节点即服务",
-  "ROADMAP-T4-INTRO": "在API和架构重新设计之后，VIG COIN就可以实现节点即服务的功能。这样钱包可以发起请求，从而可以实现轻钱包，即实现了PoRs。同时可以让商家通过节点向全世界提供服务。",
-  "ROADMAP-STATE-DONE": "已完成",
-  "ROADMAP-STATE-PROGRESSING": "进行中",
-  "ROADMAP-STATE-PLANNED": "已计划",
+  "PRODUCTS-T1": "1. 构建基本币",
+  "PRODUCTS-T1-INTRO": "基于CryptoNote，构建一个方方面面基本完备的新币。",
+  "PRODUCTS-T2": "2. 重新设计API",
+  "PRODUCTS-T2-INTRO": "包括代码迁移，优化，架构，完善API文档，提升原有软件的稳定性与功能。",
+  "PRODUCTS-T3": "3. 轻量级的，多平台的钱包",
+  "PRODUCTS-T3-INTRO": "在API和架构重新设计之后，让VIG COIN可以处理轻钱包的请求。从而为进一步实现多平台的钱包打下基础。",
+  "PRODUCTS-T4": "4. 实现节点即服务",
+  "PRODUCTS-T4-INTRO": "在API和架构重新设计之后，VIG COIN就可以实现节点即服务的功能。这样钱包可以发起请求，从而可以实现轻钱包，即实现了PoRs。同时可以让商家通过节点向全世界提供服务。",
+  "PRODUCTS-STATE-DONE": "已完成",
+  "PRODUCTS-STATE-PROGRESSING": "进行中",
+  "PRODUCTS-STATE-PLANNED": "已计划",
   "EXCHANGE-NAME-1": "QBTC",
   "EXCHANGE-NAME-1-URL": "https://www.qbtc.ink/trade?symbol=VIG_CNYT",
   "EXCHANGE-BUY": "购买",
