--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -2,6 +2,7 @@
   "TITLE": "浙江瑞宏塑胶有限公司-PVB|pvb film | PVB胶片| PVB中间膜| 玻璃|安全玻璃| 聚乙烯醇缩丁醛树脂",
   "NAV-NAME": "浙江瑞宏塑胶有限公司",
   "NAV-HOME": "网站首页",
+  "NAV-INFO": "公司资料",
   "NAV-INTRO": "公司简介",
   "NAV-NEWS": "新闻中心",
   "NAV-PRODUCTS": "产品展示",
