--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -4,6 +4,7 @@
   "NAV-HOME": "网站首页",
   "NAV-INFO": "公司资料",
   "NAV-INTRO": "公司简介",
+  "NAV-DETAILS": "公司详情",
   "NAV-NEWS": "新闻中心",
   "NAV-PRODUCTS": "产品展示",
   "NAV-WALLET": "在线订单",
