--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -7,13 +7,12 @@
   "NAV-DETAILS": "公司详情",
   "NAV-NEWS": "新闻中心",
   "NAV-PRODUCTS": "产品展示",
-  "NAV-WALLET": "在线订单",
-  "NAV-EXCHANGE": "诚聘精英",
-  "NAV-MINING": "客户服务",
+  "NAV-CERTIFICATE": "资质荣誉",
+  "NAV-CUSTOMER": "客户服务",
   "NAV-CONTACT": "联系我们",
   "NAV-FRONTPAGE": "设为首页",
   "NAV-FAVORITE": "添加收藏",
-  "NAV-DONATION": "捐助",
+  "NAV-STORE": "在线商店",
   "WELCOME": "欢迎访问浙江瑞宏塑胶有限公司",
   "WELCOME-INTRO": "一个快速开发的用于互联网支付与实际生活支付的加密币",
   "WELCOME-SUB-TITLE": "VIG COIN的目标是成为一个去中心化，安全，注意隐私，请求证明，节能，Web友好的加密币。",
