--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -13,6 +13,7 @@
   "NAV-FRONTPAGE": "设为首页",
   "NAV-FAVORITE": "添加收藏",
   "NAV-STORE": "在线商店",
+  "NAV-FACTORY": "厂房车间",
   "WELCOME": "欢迎访问浙江瑞宏塑胶有限公司",
   "WELCOME-INTRO": "一个快速开发的用于互联网支付与实际生活支付的加密币",
   "WELCOME-SUB-TITLE": "VIG COIN的目标是成为一个去中心化，安全，注意隐私，请求证明，节能，Web友好的加密币。",
