--- a/docs/assets/i18n/zh.json
+++ b/docs/assets/i18n/zh.json
@@ -6,6 +6,7 @@
   "NAV-INTRO": "公司简介",
   "NAV-DETAILS": "公司详情",
   "NAV-NEWS": "新闻中心",
+  "NAV-NEWS-ITEM": "新闻详情",
   "NAV-PRODUCTS": "产品展示",
   "NAV-CERTIFICATE": "资质荣誉",
   "NAV-CUSTOMER": "客户服务",
