enabled add favorite

--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -15,6 +15,8 @@
   "NAV-FAVORITE": "添加收藏",
   "NAV-STORE": "在线商店",
   "NAV-FACTORY": "厂房车间",
+  "FAVORITE-CTRL-D": "请输入组合键[CTRL + D]添加当前页到你的书签/收藏中！",
+  "FAVORITE-CTRL-D-MAC": "请输入组合键[Command/Cmd + D]添加当前页到你的书签/收藏中！",
   "WELCOME": "欢迎访问浙江瑞宏塑胶有限公司",
   "WELCOME-INTRO": "一个快速开发的用于互联网支付与实际生活支付的加密币",
   "WELCOME-SUB-TITLE": "VIG COIN的目标是成为一个去中心化，安全，注意隐私，请求证明，节能，Web友好的加密币。",
