--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -17,6 +17,7 @@
   "NAV-FACTORY": "厂房车间",
   "FAVORITE-CTRL-D": "请输入组合键[CTRL + D]添加当前页到你的书签/收藏中！",
   "FAVORITE-CTRL-D-MAC": "请输入组合键[Command/Cmd + D]添加当前页到你的书签/收藏中！",
+  "HOME-SET-ALERT": "此操作被浏览器拒绝！\n请在浏览器地址栏输入“about:config”并回车\n然后将[signed.applets.codebase_principal_support]设置为'true'",
   "WELCOME": "欢迎访问浙江瑞宏塑胶有限公司",
   "WELCOME-INTRO": "一个快速开发的用于互联网支付与实际生活支付的加密币",
   "WELCOME-SUB-TITLE": "VIG COIN的目标是成为一个去中心化，安全，注意隐私，请求证明，节能，Web友好的加密币。",
