build for production

--- a/docs/assets/i18n/en.json
+++ b/docs/assets/i18n/en.json
@@ -10,7 +10,9 @@
     "NAV-CODE": "Source code",
     "NAV-CONTACT": "Contact",
     "NAV-DONATION": "Donation",
-    "WELCOME": "Welcome to VIG COIN!",
+    "FAVORITE-CTRL-D": "You can add this page to your bookmarks by pressing [CTRL + D] on your keyboard.",
+    "FAVORITE-CTRL-D-MAC": "You can add this page to your bookmarks by pressing [Command/Cmd + D] on your keyboard.",    "WELCOME": "Welcome to VIG COIN!",
+    "HOME-SET-ALERT": "Operation denied!\nPlease browse to 'about:config' and set [signed.applets.codebase_principal_support] to 'true'",
     "WELCOME-TITLE": "A fast developing coin for web and real life payment",
     "WELCOME-SUB-TITLE": "VIG COIN is to be a decentralized, secure, private, proof-of-request, energy-saving, web-friendly cryptocurrency.",
     "WELCOME-LEARN-MORE": "Learn more",
