--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,77 +1,79 @@
 {
-    "NAV-HOME": "Home",
-    "NAV-INTRO": "Philosophy",
-    "NAV-NEWS": "Technology",
-    "NAV-PRODUCTS": "Road Map",
-    "NAV-WALLET": "Wallet",
-    "NAV-EXCHANGE": "Exchange",
-    "NAV-MINING": "Mining",
-    "NAV-DEVELOPMENT": "Development",
-    "NAV-CODE": "Source code",
-    "NAV-CONTACT": "Contact",
-    "NAV-DONATION": "Donation",
-    "FAVORITE-CTRL-D": "You can add this page to your bookmarks by pressing [CTRL + D] on your keyboard.",
-    "FAVORITE-CTRL-D-MAC": "You can add this page to your bookmarks by pressing [Command/Cmd + D] on your keyboard.",    "WELCOME": "Welcome to VIG COIN!",
-    "HOME-SET-ALERT": "Operation denied!\nPlease browse to 'about:config' and set [signed.applets.codebase_principal_support] to 'true'",
-    "WELCOME-TITLE": "A fast developing coin for web and real life payment",
-    "WELCOME-SUB-TITLE": "VIG COIN is to be a decentralized, secure, private, proof-of-request, energy-saving, web-friendly cryptocurrency.",
-    "WELCOME-LEARN-MORE": "Learn more",
-    "WELCOME-WHITE-PAPER": "White Paper",
-    "INTRO-1": "Decentralized",
-    "INTRO-2": "Developer Driven",
-    "INTRO-3": "Energy Saving",
-    "INTRO-4": "Secure & Private",
-    "INTRO-5": "Web & Mobile",
-    "NEWS-T1": "CryptoNote Based",
-    "NEWS-T1-DETAIL": "An advanced cryptocurrency protocol, where monero is derived from. It is untraceable, private and secure.",
-    "NEWS-T2": "Proof of Requests",
-    "NEWS-T2-DETAIL": "VIG COIN is trying to adopt an energy saving consensus, Proof of Requests is where it will start from.",
-    "NEWS-T3": "Node as a service",
-    "NEWS-T3-DETAIL": "VIG COIN utilizes PoRs since PoW is energy-consuming. With PoRs node as a service is enabled fundamentally.",
-    "NEWS-T4": "Free Software",
-    "NEWS-T4-DETAIL": "As all projects created by vigcoin are default to GPL, which makes them free software. They are created to contribute the software freedom of human beings.",
-    "WHAT-IS-VIG-COIN": "What is VIG COIN?",
-    "WHAT-IS-VIG-COIN-INTRO": "VIG COIN is a cryptocurrency that wants to drive cryptocurrency technology to be used world wide with mobile devices and computers. It is an innovative coin with an open mind to new technologies. It wants everyone to use cryptocurrency easily. It is created for everyone who cares wealth privacy and security.",
-    "PRODUCTS-T1": "1. Building coin basics",
-    "PRODUCTS-T1-INTRO": "Based on CryptoNote, Build a new Coin with everything ready.",
-    "PRODUCTS-T2": "2. Redesigned apis",
-    "PRODUCTS-T2-INTRO": "Include code migration, refinery, Architecturing, api documentation.",
-    "PRODUCTS-T3": "3. Lightweight and multiplatform wallet",
-    "PRODUCTS-T3-INTRO": "After api and architectural redesign, VIG will be capable in handling lightweight wallet requests.",
-    "PRODUCTS-T4": "4. Node as a service for merchants",
-    "PRODUCTS-T4-INTRO": "After api and architectural redesign, VIG will be capable to implement a service for each node, where every wallet can request at. Merchants can own their profits by operating a service node for users from all over the world.",
-    "PRODUCTS-STATE-DONE": "Done",
-    "PRODUCTS-STATE-PROGRESSING": "Progressing",
-    "PRODUCTS-STATE-PLANNED": "Planned",
-    "EXCHANGE-NAME-1": "QBTC",
-    "EXCHANGE-NAME-1-URL": "https://www.qbtc.ink/trade?symbol=VIG_USDT",
-    "EXCHANGE-BUY": "Buy",
-    "MINING-T1": "Official Mining Pool",
-    "MINING-T1-1": "VIG COIN encourages user customized pools.",
-    "MINING-T1-2": "Before users building their pools, ",
-    "MINING-T1-3": "VIG COIN is officially offering a pool for transactions and miners.",
-    "MINING-T1-4": "It is ",
-    "MINING-T1-5": "It accepts new pools with more than ten miners.",
-    "MINING-T1-6": "Mining poll guidance",
-    "DEVELOPMENT-T1": "Open Source & Free Software",
-    "DEVELOPMENT-T1-1": "VIG COIN is derived from the CryptoNote project which is an open source project.",
-    "DEVELOPMENT-T1-2": "And VIG COIN is going further to be free software which is lincensed with GPL.",
-    "DEVELOPMENT-T1-3": "That means VIG COIN source should not be closed by any private company.",
-    "DEVELOPMENT-T1-4": "The VIG COIN open source project group is located at :",
-    "DEVELOPMENT-T1-5": "It contains a lot of projects including coin core, wallet, pool, homepage, etc.",
-    "DEVELOPMENT-T1-6": "The cryptonote-rust is created and maintained by the vig development team too.",
-    "DEVELOPMENT-T1-7": "You can visit it at :",
-    "CODE-T1": "Main repo",
-    "CODE-T1-1": "Github Group",
-    "CODE-T1-2": "Coind",
-    "CODE-T1-3": "Wallet",
-    "CODE-T2": "Rust new packages",
-    "CODE-T2-1": "cryptonote rust",
-    "DONATION-BITCOIN": "Bitcoin",
-    "DONATION-MONERO": "Monero",
-    "DONATION-VIGCOIN": "Vigcoin",
-    "FOUNDATION": "The VIG COIN Foundation",
-    "RIGHTS": "All rights reserved.",
-    "LANGUAGES": "Languages",
-    "END": ""
+  "NAV-HOME": "Home",
+  "NAV-INTRO": "Philosophy",
+  "NAV-NEWS": "Technology",
+  "NAV-PRODUCTS": "Road Map",
+  "NAV-WALLET": "Wallet",
+  "NAV-EXCHANGE": "Exchange",
+  "NAV-MINING": "Mining",
+  "NAV-DEVELOPMENT": "Development",
+  "NAV-CODE": "Source code",
+  "NAV-CONTACT": "Contact",
+  "NAV-DONATION": "Donation",
+  "INTRO-FULL": "Click to View full Intro",
+  "FAVORITE-CTRL-D": "You can add this page to your bookmarks by pressing [CTRL + D] on your keyboard.",
+  "FAVORITE-CTRL-D-MAC": "You can add this page to your bookmarks by pressing [Command/Cmd + D] on your keyboard.",
+  "WELCOME": "Welcome to VIG COIN!",
+  "HOME-SET-ALERT": "Operation denied!\nPlease browse to 'about:config' and set [signed.applets.codebase_principal_support] to 'true'",
+  "WELCOME-TITLE": "A fast developing coin for web and real life payment",
+  "WELCOME-SUB-TITLE": "VIG COIN is to be a decentralized, secure, private, proof-of-request, energy-saving, web-friendly cryptocurrency.",
+  "WELCOME-LEARN-MORE": "Learn more",
+  "WELCOME-WHITE-PAPER": "White Paper",
+  "INTRO-1": "Decentralized",
+  "INTRO-2": "Developer Driven",
+  "INTRO-3": "Energy Saving",
+  "INTRO-4": "Secure & Private",
+  "INTRO-5": "Web & Mobile",
+  "NEWS-T1": "CryptoNote Based",
+  "NEWS-T1-DETAIL": "An advanced cryptocurrency protocol, where monero is derived from. It is untraceable, private and secure.",
+  "NEWS-T2": "Proof of Requests",
+  "NEWS-T2-DETAIL": "VIG COIN is trying to adopt an energy saving consensus, Proof of Requests is where it will start from.",
+  "NEWS-T3": "Node as a service",
+  "NEWS-T3-DETAIL": "VIG COIN utilizes PoRs since PoW is energy-consuming. With PoRs node as a service is enabled fundamentally.",
+  "NEWS-T4": "Free Software",
+  "NEWS-T4-DETAIL": "As all projects created by vigcoin are default to GPL, which makes them free software. They are created to contribute the software freedom of human beings.",
+  "WHAT-IS-VIG-COIN": "What is VIG COIN?",
+  "WHAT-IS-VIG-COIN-INTRO": "VIG COIN is a cryptocurrency that wants to drive cryptocurrency technology to be used world wide with mobile devices and computers. It is an innovative coin with an open mind to new technologies. It wants everyone to use cryptocurrency easily. It is created for everyone who cares wealth privacy and security.",
+  "PRODUCTS-T1": "1. Building coin basics",
+  "PRODUCTS-T1-INTRO": "Based on CryptoNote, Build a new Coin with everything ready.",
+  "PRODUCTS-T2": "2. Redesigned apis",
+  "PRODUCTS-T2-INTRO": "Include code migration, refinery, Architecturing, api documentation.",
+  "PRODUCTS-T3": "3. Lightweight and multiplatform wallet",
+  "PRODUCTS-T3-INTRO": "After api and architectural redesign, VIG will be capable in handling lightweight wallet requests.",
+  "PRODUCTS-T4": "4. Node as a service for merchants",
+  "PRODUCTS-T4-INTRO": "After api and architectural redesign, VIG will be capable to implement a service for each node, where every wallet can request at. Merchants can own their profits by operating a service node for users from all over the world.",
+  "PRODUCTS-STATE-DONE": "Done",
+  "PRODUCTS-STATE-PROGRESSING": "Progressing",
+  "PRODUCTS-STATE-PLANNED": "Planned",
+  "EXCHANGE-NAME-1": "QBTC",
+  "EXCHANGE-NAME-1-URL": "https://www.qbtc.ink/trade?symbol=VIG_USDT",
+  "EXCHANGE-BUY": "Buy",
+  "MINING-T1": "Official Mining Pool",
+  "MINING-T1-1": "VIG COIN encourages user customized pools.",
+  "MINING-T1-2": "Before users building their pools, ",
+  "MINING-T1-3": "VIG COIN is officially offering a pool for transactions and miners.",
+  "MINING-T1-4": "It is ",
+  "MINING-T1-5": "It accepts new pools with more than ten miners.",
+  "MINING-T1-6": "Mining poll guidance",
+  "DEVELOPMENT-T1": "Open Source & Free Software",
+  "DEVELOPMENT-T1-1": "VIG COIN is derived from the CryptoNote project which is an open source project.",
+  "DEVELOPMENT-T1-2": "And VIG COIN is going further to be free software which is lincensed with GPL.",
+  "DEVELOPMENT-T1-3": "That means VIG COIN source should not be closed by any private company.",
+  "DEVELOPMENT-T1-4": "The VIG COIN open source project group is located at :",
+  "DEVELOPMENT-T1-5": "It contains a lot of projects including coin core, wallet, pool, homepage, etc.",
+  "DEVELOPMENT-T1-6": "The cryptonote-rust is created and maintained by the vig development team too.",
+  "DEVELOPMENT-T1-7": "You can visit it at :",
+  "CODE-T1": "Main repo",
+  "CODE-T1-1": "Github Group",
+  "CODE-T1-2": "Coind",
+  "CODE-T1-3": "Wallet",
+  "CODE-T2": "Rust new packages",
+  "CODE-T2-1": "cryptonote rust",
+  "DONATION-BITCOIN": "Bitcoin",
+  "DONATION-MONERO": "Monero",
+  "DONATION-VIGCOIN": "Vigcoin",
+  "FOUNDATION": "The VIG COIN Foundation",
+  "RIGHTS": "All rights reserved.",
+  "LANGUAGES": "Languages",
+  "END": ""
 }
