enabled dynamic stores

--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -37,8 +37,6 @@
   "NEWS-T3-DETAIL": "由于PoW是最成熟的加密币分发形式。VIG COIN一开始会基于Pow，但是他同时也是能源消耗的，所以VIG COIN采用了请求证明(PoRs,Proof of Requests)。 而请求证明本身就是让节点成为了服务者。",
   "NEWS-T4": "自由软件",
   "NEWS-T4-DETAIL": "VIG COIN的所有项目都是默认基于GPL创建的。所以VIG COIN的所有软件都是自由软件。因为VIG COIN创建的目标就是谋求全人类在软件层面的自由。",
-  "WHAT-IS-VIG-COIN": "VIG COIN是什么?",
-  "WHAT-IS-VIG-COIN-INTRO": "VIG COIN是一个加密币，它旨在推动加密币在移动设备与计算机上的全球范围的应用。它是一个追求创新，解决问题的加密币，对新的加密币技术非常关注。并旨在让所有人都便捷的使用加密币。它也旨在加强每个人的财富隐密与安全。",
   "PRODUCTS-T1": "1. 构建基本币",
   "PRODUCTS-T1-INTRO": "基于CryptoNote，构建一个方方面面基本完备的新币。",
   "PRODUCTS-T2": "2. 重新设计API",
@@ -50,35 +48,7 @@
   "PRODUCTS-STATE-DONE": "已完成",
   "PRODUCTS-STATE-PROGRESSING": "进行中",
   "PRODUCTS-STATE-PLANNED": "已计划",
-  "EXCHANGE-NAME-1": "QBTC",
-  "EXCHANGE-NAME-1-URL": "https://www.qbtc.ink/trade?symbol=VIG_CNYT",
-  "EXCHANGE-BUY": "购买",
-  "MINING-T1": "官方矿池",
-  "MINING-T1-1": "VIG COIN鼓励用户自建矿池。",
-  "MINING-T1-2": "在用户构建他们的矿池之前，",
-  "MINING-T1-3": "VIG COIN官方提供一个矿池，用于交易的完成与打包，同时提供矿工挖矿功能",
-  "MINING-T1-4": "矿池地址：",
-  "MINING-T1-5": "矿池网页会非常乐意收录超过10个矿工的新矿池。",
-  "MINING-T1-6": "矿池搭建指南",
-  "DEVELOPMENT-T1": "开源与自由软件",
-  "DEVELOPMENT-T1-1": "VIG COIN基于CryptoNote项目，同时它是开源项目。",
-  "DEVELOPMENT-T1-2": "VIG COIN进一步把它推进到自由软件，并基于GPL授权。",
-  "DEVELOPMENT-T1-3": "这表示任何私有企业都无法将它闭源。",
-  "DEVELOPMENT-T1-4": "VIG COIN开源项目组位于：",
-  "DEVELOPMENT-T1-5": "项目组包括了加密币核心代码，钱包，矿池，主站页面等的源码。",
-  "DEVELOPMENT-T1-6": "cryptonote-rust是由VIG COIN开发团队的创建并维护的。它旨在在Rust上实现CyrptoNote。",
-  "DEVELOPMENT-T1-7": "它位于：",
-  "CODE-T1": "主代码库",
-  "CODE-T1-1": "源码组",
-  "CODE-T1-2": "节点源码",
-  "CODE-T1-3": "钱包源码",
-  "CODE-T2": "Rust新代码包",
-  "CODE-T2-1": "cryptonote rust 源码组",
-  "DONATION-BITCOIN": "比特币",
-  "DONATION-MONERO": "门罗币",
-  "DONATION-VIGCOIN": "伟哥币",
-  "FOUNDATION": "VIG COIN基金会",
-  "RIGHTS": "保留所有版权。",
+  "COPYRIGHTS": "保留所有版权",
   "LANGUAGES": "语言选择",
   "END": ""
 }
