--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,24 +1,25 @@
 {
+  "TITLE": "浙江瑞宏塑胶有限公司-PVB|pvb film | PVB胶片| PVB中间膜| 玻璃|安全玻璃| 聚乙烯醇缩丁醛树脂",
+  "NAV-NAME": "浙江瑞宏塑胶有限公司",
   "NAV-HOME": "Home",
-  "NAV-INTRO": "Philosophy",
-  "NAV-NEWS": "Technology",
-  "NAV-PRODUCTS": "Road Map",
-  "NAV-WALLET": "Wallet",
-  "NAV-EXCHANGE": "Exchange",
-  "NAV-MINING": "Mining",
-  "NAV-DEVELOPMENT": "Development",
-  "NAV-CODE": "Source code",
+  "NAV-INFO": "Company resource",
+  "NAV-INTRO": "Introduction",
+  "NAV-DETAILS": "公司详情",
+  "NAV-NEWS": "News",
+  "NAV-NEWS-ITEM": "新闻详情",
+  "NAV-PRODUCTS": "Products",
+  "NAV-CERTIFICATE": "资质荣誉",
+  "NAV-CUSTOMER": "客户服务",
   "NAV-CONTACT": "Contact",
-  "NAV-DONATION": "Donation",
+  "NAV-FRONTPAGE": "设为首页",
+  "NAV-FAVORITE": "添加收藏",
+  "NAV-STORE": "在线商店",
+  "NAV-FACTORY": "厂房车间",
   "INTRO-FULL": "Click to View full Intro",
   "FAVORITE-CTRL-D": "You can add this page to your bookmarks by pressing [CTRL + D] on your keyboard.",
   "FAVORITE-CTRL-D-MAC": "You can add this page to your bookmarks by pressing [Command/Cmd + D] on your keyboard.",
-  "WELCOME": "Welcome to VIG COIN!",
   "HOME-SET-ALERT": "Operation denied!\nPlease browse to 'about:config' and set [signed.applets.codebase_principal_support] to 'true'",
-  "WELCOME-TITLE": "A fast developing coin for web and real life payment",
-  "WELCOME-SUB-TITLE": "VIG COIN is to be a decentralized, secure, private, proof-of-request, energy-saving, web-friendly cryptocurrency.",
-  "WELCOME-LEARN-MORE": "Learn more",
-  "WELCOME-WHITE-PAPER": "White Paper",
+  "WELCOME": "欢迎访问浙江瑞宏塑胶有限公司",
   "INTRO-1": "Decentralized",
   "INTRO-2": "Developer Driven",
   "INTRO-3": "Energy Saving",
