enable i18n for some item

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,25 +1,25 @@
 {
-  "TITLE": "浙江瑞宏塑胶有限公司-PVB|pvb film | PVB胶片| PVB中间膜| 玻璃|安全玻璃| 聚乙烯醇缩丁醛树脂",
-  "NAV-NAME": "浙江瑞宏塑胶有限公司",
+  "TITLE": "Zhejiang Rehone Plastic Co., Ltd.-PVB|pvb film | PVB胶片| PVB中间膜| 玻璃|安全玻璃| 聚乙烯醇缩丁醛树脂",
+  "NAV-NAME": "Zhejiang Rehone Plastic Co., Ltd.",
   "NAV-HOME": "Home",
-  "NAV-INFO": "Company resource",
+  "NAV-INFO": "Company Resource",
   "NAV-INTRO": "Introduction",
-  "NAV-DETAILS": "公司详情",
+  "NAV-DETAILS": "Company Info",
   "NAV-NEWS": "News",
-  "NAV-NEWS-ITEM": "新闻详情",
+  "NAV-NEWS-ITEM": "Detailed News",
   "NAV-PRODUCTS": "Products",
-  "NAV-CERTIFICATE": "资质荣誉",
-  "NAV-CUSTOMER": "客户服务",
+  "NAV-CERTIFICATE": "Certificates",
+  "NAV-CUSTOMER": "Customer Service",
   "NAV-CONTACT": "Contact",
-  "NAV-FRONTPAGE": "设为首页",
-  "NAV-FAVORITE": "添加收藏",
-  "NAV-STORE": "在线商店",
-  "NAV-FACTORY": "厂房车间",
+  "NAV-FRONTPAGE": "Default Home Page",
+  "NAV-FAVORITE": "Add to Favorites",
+  "NAV-STORE": "Online Stores",
+  "NAV-FACTORY": "Factory",
   "INTRO-FULL": "Click to View full Intro",
   "FAVORITE-CTRL-D": "You can add this page to your bookmarks by pressing [CTRL + D] on your keyboard.",
   "FAVORITE-CTRL-D-MAC": "You can add this page to your bookmarks by pressing [Command/Cmd + D] on your keyboard.",
   "HOME-SET-ALERT": "Operation denied!\nPlease browse to 'about:config' and set [signed.applets.codebase_principal_support] to 'true'",
-  "WELCOME": "欢迎访问浙江瑞宏塑胶有限公司",
+  "WELCOME": "Welcome to Zhejiang Rehone Plastic Co., Ltd.",
   "INTRO-1": "Decentralized",
   "INTRO-2": "Developer Driven",
   "INTRO-3": "Energy Saving",
@@ -46,5 +46,8 @@
   "PRODUCTS-STATE-PLANNED": "Planned",
   "COPYRIGHTS": "All rights reserved",
   "LANGUAGES": "Languages",
-  "END": ""
+  "ADMIN-ENTRANCE": "Adminitration",
+  "TECH-SUPPORT": "Technical Support by : ",
+  "TECH-SUPPORTER": "Zhejiang Tianyikuai Co., Ltd.",
+  "STATISTICS": "Statistics : "
 }
