--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -46,5 +46,8 @@
   "PRODUCTS-STATE-PLANNED": "已计划",
   "COPYRIGHTS": "保留所有版权",
   "LANGUAGES": "语言选择",
-  "END": ""
+  "ADMIN-ENTRANCE": "网站管理",
+  "TECH-SUPPORT": "技术支持：",
+  "TECH-SUPPORTER": "田一块网络科技有限公司",
+  "STATISTICS": "浏览统计："
 }
