--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -49,5 +49,7 @@
   "ADMIN-ENTRANCE": "网站管理",
   "TECH-SUPPORT": "技术支持：",
   "TECH-SUPPORTER": "田一块网络科技有限公司",
-  "STATISTICS": "浏览统计："
+  "STATISTICS": "浏览统计：",
+  "BUY": "购买"
+
 }
