--- a/docs/assets/i18n/zh.json
+++ b/docs/assets/i18n/zh.json
@@ -15,69 +15,17 @@
   "NAV-FAVORITE": "添加收藏",
   "NAV-STORE": "在线商店",
   "NAV-FACTORY": "厂房车间",
+  "INTRO-FULL": "点击查看全文",
   "FAVORITE-CTRL-D": "请输入组合键[CTRL + D]添加当前页到你的书签/收藏中！",
   "FAVORITE-CTRL-D-MAC": "请输入组合键[Command/Cmd + D]添加当前页到你的书签/收藏中！",
   "HOME-SET-ALERT": "此操作被浏览器拒绝！\n请在浏览器地址栏输入“about:config”并回车\n然后将[signed.applets.codebase_principal_support]设置为'true'",
   "WELCOME": "欢迎访问浙江瑞宏塑胶有限公司",
-  "WELCOME-INTRO": "一个快速开发的用于互联网支付与实际生活支付的加密币",
-  "WELCOME-SUB-TITLE": "VIG COIN的目标是成为一个去中心化，安全，注意隐私，请求证明，节能，Web友好的加密币。",
-  "WELCOME-LEARN-MORE": "了解更多",
-  "WELCOME-WHITE-PAPER": "白皮书",
-  "INTRO-1": "去中心化",
-  "INTRO-2": "开发者驱动",
-  "INTRO-3": "节约能源",
-  "INTRO-4": "安全保护隐私",
-  "INTRO-5": "Web与移动导向",
-  "NEWS-T1": "基于CryptoNote",
-  "NEWS-T1-DETAIL": "CryptoNote是一个先进的加密币协议，门罗也是基于这个协议。它不可追溯，能保护隐私，安全性高。",
-  "NEWS-T2": "请求证明",
-  "NEWS-T2-DETAIL": "VIG COIN试图引入节约能源的共识技术。请求证明(PoRs,Proof of Requests)是它首次提出，并将会启用的方式。",
-  "NEWS-T3": "节点即服务",
-  "NEWS-T3-DETAIL": "由于PoW是最成熟的加密币分发形式。VIG COIN一开始会基于Pow，但是他同时也是能源消耗的，所以VIG COIN采用了请求证明(PoRs,Proof of Requests)。 而请求证明本身就是让节点成为了服务者。",
-  "NEWS-T4": "自由软件",
-  "NEWS-T4-DETAIL": "VIG COIN的所有项目都是默认基于GPL创建的。所以VIG COIN的所有软件都是自由软件。因为VIG COIN创建的目标就是谋求全人类在软件层面的自由。",
-  "WHAT-IS-VIG-COIN": "VIG COIN是什么?",
-  "WHAT-IS-VIG-COIN-INTRO": "VIG COIN是一个加密币，它旨在推动加密币在移动设备与计算机上的全球范围的应用。它是一个追求创新，解决问题的加密币，对新的加密币技术非常关注。并旨在让所有人都便捷的使用加密币。它也旨在加强每个人的财富隐密与安全。",
-  "PRODUCTS-T1": "1. 构建基本币",
-  "PRODUCTS-T1-INTRO": "基于CryptoNote，构建一个方方面面基本完备的新币。",
-  "PRODUCTS-T2": "2. 重新设计API",
-  "PRODUCTS-T2-INTRO": "包括代码迁移，优化，架构，完善API文档，提升原有软件的稳定性与功能。",
-  "PRODUCTS-T3": "3. 轻量级的，多平台的钱包",
-  "PRODUCTS-T3-INTRO": "在API和架构重新设计之后，让VIG COIN可以处理轻钱包的请求。从而为进一步实现多平台的钱包打下基础。",
-  "PRODUCTS-T4": "4. 实现节点即服务",
-  "PRODUCTS-T4-INTRO": "在API和架构重新设计之后，VIG COIN就可以实现节点即服务的功能。这样钱包可以发起请求，从而可以实现轻钱包，即实现了PoRs。同时可以让商家通过节点向全世界提供服务。",
-  "PRODUCTS-STATE-DONE": "已完成",
-  "PRODUCTS-STATE-PROGRESSING": "进行中",
-  "PRODUCTS-STATE-PLANNED": "已计划",
-  "EXCHANGE-NAME-1": "QBTC",
-  "EXCHANGE-NAME-1-URL": "https://www.qbtc.ink/trade?symbol=VIG_CNYT",
-  "EXCHANGE-BUY": "购买",
-  "MINING-T1": "官方矿池",
-  "MINING-T1-1": "VIG COIN鼓励用户自建矿池。",
-  "MINING-T1-2": "在用户构建他们的矿池之前，",
-  "MINING-T1-3": "VIG COIN官方提供一个矿池，用于交易的完成与打包，同时提供矿工挖矿功能",
-  "MINING-T1-4": "矿池地址：",
-  "MINING-T1-5": "矿池网页会非常乐意收录超过10个矿工的新矿池。",
-  "MINING-T1-6": "矿池搭建指南",
-  "DEVELOPMENT-T1": "开源与自由软件",
-  "DEVELOPMENT-T1-1": "VIG COIN基于CryptoNote项目，同时它是开源项目。",
-  "DEVELOPMENT-T1-2": "VIG COIN进一步把它推进到自由软件，并基于GPL授权。",
-  "DEVELOPMENT-T1-3": "这表示任何私有企业都无法将它闭源。",
-  "DEVELOPMENT-T1-4": "VIG COIN开源项目组位于：",
-  "DEVELOPMENT-T1-5": "项目组包括了加密币核心代码，钱包，矿池，主站页面等的源码。",
-  "DEVELOPMENT-T1-6": "cryptonote-rust是由VIG COIN开发团队的创建并维护的。它旨在在Rust上实现CyrptoNote。",
-  "DEVELOPMENT-T1-7": "它位于：",
-  "CODE-T1": "主代码库",
-  "CODE-T1-1": "源码组",
-  "CODE-T1-2": "节点源码",
-  "CODE-T1-3": "钱包源码",
-  "CODE-T2": "Rust新代码包",
-  "CODE-T2-1": "cryptonote rust 源码组",
-  "DONATION-BITCOIN": "比特币",
-  "DONATION-MONERO": "门罗币",
-  "DONATION-VIGCOIN": "伟哥币",
-  "FOUNDATION": "VIG COIN基金会",
-  "RIGHTS": "保留所有版权。",
+  "COPYRIGHTS": "保留所有版权",
   "LANGUAGES": "语言选择",
-  "END": ""
+  "ADMIN-ENTRANCE": "网站管理",
+  "TECH-SUPPORT": "技术支持：",
+  "TECH-SUPPORTER": "田一块网络科技有限公司",
+  "STATISTICS": "浏览统计：",
+  "BUY": "购买"
+
 }
